
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8_t ;
typedef int u64_t ;
typedef int u32_t ;
typedef int u16_t ;
struct bt_mesh_subnet {int net_idx; } ;
struct bt_mesh_net_tx {int src; int xmit; struct bt_mesh_msg_ctx* ctx; struct bt_mesh_subnet* sub; } ;
struct bt_mesh_msg_ctx {int addr; int send_ttl; int app_idx; int net_idx; } ;
typedef int buf ;


 int BLE_MESH_ADDR_IS_UNICAST (int) ;
 int BLE_MESH_KEY_UNUSED ;
 int BT_DBG (char*,int,int ,int) ;
 int BT_WARN (char*) ;
 int TRANS_CTL_OP_ACK ;
 int bt_mesh_ctl_send (struct bt_mesh_net_tx*,int ,int*,int,int *,int *,int *) ;
 scalar_t__ bt_mesh_lpn_established () ;
 int bt_mesh_net_transmit_get () ;
 int bt_mesh_primary_addr () ;
 int sys_put_be16 (int,int*) ;
 int sys_put_be32 (int ,int*) ;

__attribute__((used)) static int send_ack(struct bt_mesh_subnet *sub, u16_t src, u16_t dst,
                    u8_t ttl, u64_t *seq_auth, u32_t block, u8_t obo)
{
    struct bt_mesh_msg_ctx ctx = {
        .net_idx = sub->net_idx,
        .app_idx = BLE_MESH_KEY_UNUSED,
        .addr = dst,
        .send_ttl = ttl,
    };
    struct bt_mesh_net_tx tx = {
        .sub = sub,
        .ctx = &ctx,
        .src = obo ? bt_mesh_primary_addr() : src,
        .xmit = bt_mesh_net_transmit_get(),
    };
    u16_t seq_zero = *seq_auth & 0x1fff;
    u8_t buf[6];

    BT_DBG("SeqZero 0x%04x Block 0x%08x OBO %u", seq_zero, block, obo);

    if (bt_mesh_lpn_established()) {
        BT_WARN("Not sending ack when LPN is enabled");
        return 0;
    }




    if (!BLE_MESH_ADDR_IS_UNICAST(src)) {
        BT_WARN("Not sending ack for non-unicast address");
        return 0;
    }

    sys_put_be16(((seq_zero << 2) & 0x7ffc) | (obo << 15), buf);
    sys_put_be32(block, &buf[2]);

    return bt_mesh_ctl_send(&tx, TRANS_CTL_OP_ACK, buf, sizeof(buf),
                            ((void*)0), ((void*)0), ((void*)0));
}
